<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_mahasiswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/raptor_500"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableRight="@drawable/ic_ubah"
                android:gravity="start"
                android:text="@string/date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@color/dino_700"
                android:gravity="start"
                android:text="@string/nama"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/nim"
                android:textSize="18sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:id="@+id/action_detail"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="end"
                android:drawableRight="@drawable/ic_detail"
                android:textColor="@color/dino_500"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/detail" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>