<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/zaenal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/profile_image"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev"
                    android:fontFamily="@font/the_chieldren"
                    android:textSize="37sp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noinduk"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/rex_700"
                    android:layout_marginTop="5dp" />



            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/rex_700"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="20dp"
            app:dividerInsetEnd="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutme"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</RelativeLayout>
