<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Version">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/profile_image"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/the_chieldren"
                    android:textSize="37sp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textSize="13sp"
                    android:textColor="@color/rex_700"
                    android:layout_marginTop="5dp" />



            </LinearLayout>

        </RelativeLayout>


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="20dp"
            app:dividerInsetEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contributor"
            android:drawableLeft="@drawable/ic_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Documentation"
            android:drawableLeft="@drawable/ic_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Feedback"
            android:drawableLeft="@drawable/ic_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/id_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/version"
            android:textSize="18sp"
            android:gravity="bottom"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</RelativeLayout>