<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MhsListActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/raptor_500"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/the_chieldren"
                android:text="@string/judul"
                android:textAlignment="center"
                android:textSize="35sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="20dp"
                app:dividerInsetEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nim"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/rex_700"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/txt_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nim"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/rex_700"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jurusan"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/rex_700"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/txt_jurusan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jurusan"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobi"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/rex_700"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/txt_hobi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobi"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="20dp"
                app:dividerInsetEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>

